[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "earth2studio"
version = "0.1.0" # Will be dynamically set if needed
license = "Apache-2.0"
description = "Open-source deep-learning framework for exploring, building and deploying AI weather/climate workflows."
authors = ["NVIDIA Modulus Team"]
readme = "README.md"
repository = "https://github.com/NVIDIA/earth2studio"
documentation = "https://nvidia.github.io/earth2studio"
keywords = ["AI", "weather", "climate", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{include = "earth2studio"}]

[tool.poetry.dependencies]
python = ">=3.10"
cfgrib = ">=0.9.10.3"
cftime = "*"
fsspec = ">=2024.2.0"
gcsfs = "*"
h5py = ">=3.2.0"
h5netcdf = ">=1.0.0"
huggingface-hub = ">=0.4.0"
importlib_metadata = "*"
loguru = "*"
netCDF4 = ">=1.6.4"
ngcsdk = ">=3.48.0,<3.55.0"
numpy = ">=1.24.0"
nvidia-modulus = {git = "https://github.com/NVIDIA/modulus.git"}
omegaconf = "*"
python-dotenv = "*"
s3fs = ">=2023.5.0"
torch = ">=2.0.0"
torch_harmonics = "0.6.*"
tqdm = ">=4.65.0"
xarray = {version = ">=2023.1.0", extras = ["parallel"]}
zarr = ">=2.14.2"

[tool.poetry.group.dev.dependencies]
black = "==22.10.0"
coverage = ">=6.5.0"
interrogate = "==1.5.0"
mypy = "*"
pre-commit = "*"
pytest = ">=6.0.0"
pytest-timeout = ">=2.0.1"
pytest-skip-slow = ">=0.0.5"
pyyaml = ">=6.0"
types-requests = "*"
ruff = "==0.1.5"

[tool.poetry.group.docs.dependencies]
cartopy = "*"
matplotlib = "*"
scipy = "*"
sphinx-design = "*"
sphinx = ">=6.0.0"
jupytext = ">=1.15.0"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-gallery = ">=0.12.0"
sphinx-togglebutton = ">=0.3.0"
myst-parser = ">=0.18.0"
sphinx-favicon = ">=1.0.1"
pydata-sphinx-theme = "==0.15.2"

[tool.poetry.group.all.dependencies]
cdsapi = ">=0.7.4"
eccodes = {version = ">=1.4.0", markers = "python_version<'3.12'"}
ecmwflibs = ">=0.5.2"
ecmwf-opendata = ">=0.3.3"
herbie-data = "*"
onnxruntime-gpu = "*"
jsbeautifier = "*"
pynvml = "*"
numba = "*"
ruamel.yaml = "*"
torch-harmonics = "*"
tensorly = "*"
tensorly-torch = "*"
einops = ">=0.7.0"

[tool.poetry.plugins."pytest11"]
pytest-coverage = "coverage"

[tool.poetry.scripts]
earth2studio = "earth2studio.cli:main"

[tool.ruff]
select = ["E", "F", "S", "I", "PERF"]
fixable = ["I"]
ignore = ["E501", "S311"]

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = [".git", "third_party"]
addopts = ["-vv", "-r", "xfXs"]
markers = [
    "slow: marks tests as slow (deselect with: -m 'not slow')",
    "cli: marks tests which run CLIs"
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
source = ["earth2studio"]
omit = ["third_party/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
fail_under = 75

[tool.coverage.xml]
output = "e2studio.coverage.xml"

[tool.mypy]
python_version = "3.10"
packages = ["earth2studio"]
exclude = ["^(examples|test|docs)"]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
follow_imports = "skip"
